# ray-tracer-challenge

./: Cargo.toml  LICENSE.md  README.md
analog-clock/: Cargo.toml  clock.ppm
analog-clock/src/: main.rs
approx-eq/: Cargo.toml
approx-eq/src/: lib.rs
colo-rs/: Cargo.toml
colo-rs/src/: colors.rs
cones-drawing/: Cargo.toml
cones-drawing/src/: main.rs
csg-drawing/: Cargo.toml  csg.ppm
csg-drawing/src/: main.rs
cubes-drawing/: Cargo.toml  cubes.ppm
cubes-drawing/src/: main.rs
hexagon-drawing/: Cargo.toml
hexagon-drawing/src/: main.rs
obj-drawing/: Cargo.toml  teapot.ppm
obj-drawing/src/: main.rs
open-cylinders-drawing/: Cargo.toml
open-cylinders-drawing/src/: main.rs
patterns-drawing/: Cargo.toml  pattern.ppm
plane-drawing/: Cargo.toml  plane.ppm
plane-drawing/src/: main.rs
ray-tracer/: Cargo.toml
ray-tracer/src/: bounds.rs  camera.rs  canvas.rs  intersections.rs  lib.rs  lights.rs  materials.rs  matrix.rs  obj_parser.rs  octree.rs  points.rs  ppm.rs  rays.rs  registry.rs  sphere.rs  transformations.rs  tuples.rs  vectors.rs  world.rs  yaml_loader.rs
ray-tracer/src/patterns/: blending_pattern.rs  checker_pattern.rs  linear_gradient_pattern.rs  mod.rs  perturbed_pattern.rs  ring_pattern.rs  solid_pattern.rs  striped_pattern.rs  test_pattern.rs
ray-tracer/src/shapes/: cone.rs  csg.rs  cube.rs  cylinder.rs  group.rs  mod.rs  plane.rs  smooth_triangle.rs  sphere.rs  test_shape.rs  triangle.rs
ray-tracer/src/tuples/: mod.rs  points.rs  vectors.rs
reflections-drawing/: Cargo.toml  reflection.ppm
refractions-drawing/: Cargo.toml
scene-drawing/: Cargo.toml  cover.ppm
sphere-drawing/: Cargo.toml  sphere.ppm
virtual-cannon/: Cargo.toml  trajectory.ppm
world-drawing/: Cargo.toml  world.ppm
yaml-drawing/: Cargo.toml
(+9 files in other folders)
