[workspace]
members = [ "analog-clock", "approx-eq", "colo-rs", "patterns-drawing", "plane-drawing", "ray-tracer", "sphere-drawing", "virtual-cannon", "world-drawing"]
resolver = "2"

[workspace.dependencies]
ray-tracer = { path = "./ray-tracer" }
colo-rs = { path = "./colo-rs"}
approx-eq = { path = "./approx-eq" }
