[package]
name = "ray-tracer"
version = "0.1.0"
edition = "2021"

[dependencies]
colo-rs = { workspace = true }
approx-eq = { workspace = true }
rayon = "1.10.0"
perlin_noise = "1.0.1"
lazy_static = "1.5.0"
anyhow = "1.0.89"
meval = "0.2"
serde_yml = "0.0.12"
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
yare = "3.0.0"
